--- a/starter-webapp/pom.xml
+++ b/starter-webapp/pom.xml
@@ -273,7 +273,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>${logback-classic.version}</version>
+            <version>${logback.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
