--- a/starter-webapp/pom.xml
+++ b/starter-webapp/pom.xml
@@ -193,35 +193,15 @@
         <wsdl4j.version>1.6.3</wsdl4j.version>
         <xmlunit2.version>2.6.4</xmlunit2.version>
 
-
-
-
         <!-- profile-mvc initial dependencies -->
         <springVersion>4.0.7.RELEASE</springVersion>
         <springDataJpaVersion>1.3.2.RELEASE</springDataJpaVersion>
         <hibernateVersion>4.1.6.Final</hibernateVersion>
         <hibernateEntityManagerVersion>4.0.1.Final</hibernateEntityManagerVersion>
         <thymeleafVersion>2.1.3.RELEASE</thymeleafVersion>
-        <h2-version>1.4.182</h2-version>
         <hibernateValidatorVersion>5.0.1.Final</hibernateValidatorVersion>
-        <commonsLangVersion>3.1</commonsLangVersion>
-        <servletApiVersion>3.1.0</servletApiVersion>
-        <junitVersion>4.11</junitVersion>
-        <mockitoVersion>1.9.5</mockitoVersion>
-        <hamcrestVersion>1.3</hamcrestVersion>
 
-        <!--        <org.thymeleaf-spring5-version>3.0.7.RC1</org.thymeleaf-spring5-version>-->
-<!--        <org.thymeleaf.extras.springsecurity4-version>3.0.2.RELEASE</org.thymeleaf.extras.springsecurity4-version>-->
-<!--        <thymeleaf-extras-java8time-version>3.0.1.RELEASE</thymeleaf-extras-java8time-version>-->
         <spring-boot.version>2.2.11.RELEASE</spring-boot.version>
-        <jakarta.xml.bind-api.version>2.3.2</jakarta.xml.bind-api.version>
-        <jaxb-runtime.version>2.3.2</jaxb-runtime.version>
-        <logback-classic.version>1.0.13</logback-classic.version>
-        <HikariCP.version>3.4.1</HikariCP.version>
-        <lombokVersion>1.18.10</lombokVersion>
-        <commonsVersion>3.1</commonsVersion>
-        <jaxb-api.version>2.3.1</jaxb-api.version>
-        <mysql-connector-java.version>8.0.11</mysql-connector-java.version>
     </properties>
 
     <dependencies>
@@ -236,21 +216,6 @@
             <artifactId>spring-orm</artifactId>
             <version>${springVersion}</version>
         </dependency>
-
-        <!-- API, java.xml.bind module -->
-        <dependency>
-            <groupId>jakarta.xml.bind</groupId>
-            <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>${jakarta.xml.bind-api.version}</version>
-        </dependency>
-
-        <!-- Runtime, com.sun.xml.bind module -->
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-            <version>${jaxb-runtime.version}</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
@@ -271,6 +236,26 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${springVersion}</version>
+        </dependency>
+
+        <!-- API, java.xml.bind module -->
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jakarta-xml-bind.version}</version>
+        </dependency>
+
+        <!-- Runtime, com.sun.xml.bind module -->
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>${glassfish-jaxb.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
@@ -283,22 +268,17 @@
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
-            <version>${HikariCP.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>${springVersion}</version>
+            <version>${hikaricp.version}</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>${h2-version}</version>
+            <version>${h2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombokVersion}</version>
+            <version>${lombok.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -309,7 +289,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${commonsVersion}</version>
+            <version>${commons-lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>org.thymeleaf</groupId>
@@ -319,22 +299,33 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>${servletApiVersion}</version>
+            <version>${servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>${jaxb-api.version}</version>
+            <version>${javax-jaxb.version}</version>
             <scope>provided</scope>
         </dependency>
 
 
         <!-- test scope -->
         <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>${hamcrest.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junitVersion}</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -345,18 +336,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>${mockitoVersion}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <version>${hamcrestVersion}</version>
+            <version>${mockito.version}</version>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql-connector-java.version}</version>
+            <version>${mysql.version}</version>
         </dependency>
     </dependencies>
     <build>
