--- a/starter-webapp/pom.xml
+++ b/starter-webapp/pom.xml
@@ -194,18 +194,13 @@
         <xmlunit2.version>2.6.4</xmlunit2.version>
 
         <!-- profile-mvc initial dependencies -->
-        <springVersion>4.0.7.RELEASE</springVersion>
+        <springVersion>4.3.29.RELEASE</springVersion>
         <springDataJpaVersion>1.3.2.RELEASE</springDataJpaVersion>
-        <hibernateVersion>4.1.6.Final</hibernateVersion>
-        <hibernateEntityManagerVersion>4.0.1.Final</hibernateEntityManagerVersion>
-        <thymeleafVersion>2.1.3.RELEASE</thymeleafVersion>
-        <hibernateValidatorVersion>5.0.1.Final</hibernateValidatorVersion>
 
         <spring-boot.version>2.2.11.RELEASE</spring-boot.version>
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -254,6 +249,11 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>${glassfish-jaxb.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.el</artifactId>
+            <version>${glassfish-el.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -262,8 +262,13 @@
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>${hibernateEntityManagerVersion}</version>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
         </dependency>
         <dependency>
             <groupId>com.zaxxer</groupId>
@@ -276,15 +281,15 @@
             <version>${h2.version}</version>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>${hibernateValidatorVersion}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -294,7 +299,12 @@
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring4</artifactId>
-            <version>${thymeleafVersion}</version>
+            <version>${thymeleaf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>${thymeleaf.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -309,13 +319,7 @@
             <scope>provided</scope>
         </dependency>
 
-
         <!-- test scope -->
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <version>${hamcrest.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
@@ -332,17 +336,13 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${springVersion}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
