Added tests for the model profiles (NewProfile, and UpdateProfile). Enforced validation of the model on an update request.

--- a/starter-webapp/src/main/resources/ValidationMessages.properties
+++ b/starter-webapp/src/main/resources/ValidationMessages.properties
@@ -1,4 +1,5 @@
-firstName.size=First name must be between {min} and {max} characters long.
-lastName.size=Last name must be between {min} and {max} characters long.
-username.size=Username must be between {min} and {max} characters long.
-password.size=Password must be between {min} and {max} characters long.
+firstName.size=First name is required and must be between {min} and {max} characters long.
+lastName.size=Last name is required and must be between {min} and {max} characters long.
+username.size=Username is required and must be between {min} and {max} characters long.
+password.size=Password is required and must be between {min} and {max} characters long.
+email.message=Email address is required and must be valid
